styles/styles.css
.react-md-textarea {
  box-sizing: border-box;
  max-width: 100%;
  resize: none;
  margin: 0;
  padding: 1em;
  width: 100%;
  height: 25em;
  border: 1px solid #ddd;
  border-top: none;
  border-radius: 2px;
}

.react-md-textarea-drag {
  border: 2px dashed #8ed091;
  background: aliceblue;
}

.react-md-toolbar {
  font-size: 9pt;
  height: 29px;
  margin-bottom: 0;
  border-bottom: 1px solid #ddd;
}

div.react-md-tab {
  background: #fff;
}

div.react-md-tab button {
  margin: 2px;
  margin-top: 0;
  margin-bottom: 0;

  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border: none;
  border-bottom: 1px solid #ddd;

  background: inherit;
  float: left;
  outline: none;
  cursor: pointer;
  height: 30px;
  min-width: 5em;
}

div.react-md-tab button:first-child {
  margin-left: 0;
}

div.react-md-tab button.active {
  border: 1px solid #ddd;
  border-bottom: none;
}

.react-md-toolbar-item {
  line-height: 30px;
}

.react-md-toolbar-button {
  width: 25px;
  border: none;
  background: inherit;
  cursor: pointer;
  padding: 4px;
  margin-left: 7px;
  border-radius: 2px;
  margin-top: 2px;
}

.react-md-toolbar-button:hover {
 box-shadow: 0 1px 10px #ddd;
}

.react-md-preview-area {
  border: 1px solid #ddd;
  border-top: none;
  min-height: 15em;
  padding: 1em;
  position: relative;
}

.react-md-preview-area img {
  max-width: 100%;
}

.react-md-dropzone-wrap .react-md-remove-btn {
  cursor: pointer;
  color: #2196f3;
}

.react-md-dropzone-wrap .react-md-dropzone-info {
  background: #f7f7f7;
  color: #92a1ad;
  font-size: 12px;
  margin-top: -4px;
  padding: 0.5rem;
  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ddd;
}

.react-md-info-text {
  display: flex;
  flex-direction: row;
}

.react-md-file-guide {
  order: 0;
  flex-basis: 100%;
}

.react-md-markdown-guide {
  order: 1;
  margin-left: 10px;
  flex-basis: auto;
  flex-shrink: 0;
}

.react-md-icon {
  display: inline-block;
  width: 1.3em;
  height: 1.3em;
  stroke-width: 0;
  stroke: #545454;
  fill: #545454;
}

.react-md-toolbar-dropdown-button {
  padding: 4px 0;
  width: 28px;
}

.react-md-toolbar-caret {
    display: inline-block;
    width: 0;
    height: 0;
    vertical-align: middle;
    content: "";
    border: 4px solid;
    border-right-color: transparent;
    border-bottom-color: transparent;
    border-left-color: transparent;
}

.react-md-dropdown {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 100;
  padding: 10px 16px;
  margin-top: 2px;
  list-style: none;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 4px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
}

.react-md-dropdown ul {
  margin: 0;
  padding: 0;
}

.react-md-dropdown ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.react-md-dropdown-option {
  cursor: pointer;
}

.react-md-dropdown-option:hover {
  color: #020298;
}

.react-md-header-1 {
  font-weight: bold;
  font-size: 22px;
}

.react-md-header-2 {
  font-weight: bold;
  font-size: 18px;
}

.react-md-header-3 {
  font-weight: bold;
  font-size: 15px;
}

.react-md-error {
  color: red;
  font-weight: bold;
}

.react-md-loader,
.react-md-loader:after {
  border-radius: 50%;
  width: 3em;
  height: 3em;
}

.react-md-loader {
  margin: 30px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 0.8em solid rgba(0,17,22, 0.2);
  border-right: 0.8em solid rgba(0,17,22, 0.2);
  border-bottom: 0.8em solid rgba(0,17,22, 0.2);
  border-left: 0.8em solid #001116;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}

@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.react-md-progress {
  display: inline-block;
  width: 150px;
  height: 7px;
  background-color: #ddd;
  margin: 0 10px 0 3px;
}

.react-md-progress-value {
  display: block;
  height: 100%;
  background-color: #666;
}

